--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
+    "moment": "^2.19.1",
     "mysql": "^2.15.0",
     "react": "^15",
     "react-dom": "^15",
