--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "7",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
@@ -39,6 +41,7 @@
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
+    "immutability-helper": "^2.4.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "mysql": "^2.15.0",
