--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "postinstall": "node scripts/fix-semantic.js"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.14.7",
+    "@types/moment": "^2.13.0",
+    "@types/react": "^16.0.14",
+    "@types/react-dom": "^16.0.1",
+    "@types/react-router-dom": "^4.0.8",
+    "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "7",
@@ -35,6 +41,7 @@
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
+    "typescript": "^2.5.3",
     "webpack": "^3.6.0"
   },
   "dependencies": {
@@ -42,7 +49,7 @@
     "bcrypt": "^1.0.3",
     "express": "^4.16.2",
     "immutability-helper": "^2.4.0",
-    "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
     "moment": "^2.19.1",
     "mysql": "^2.15.0",
     "react": "^15",
