--- a/package.json
+++ b/package.json
@@ -17,12 +17,6 @@
     "@types/react-router-dom": "^4.0.8",
     "awesome-typescript-loader": "^3.2.3",
     "css-loader": "^0.28.7",
-    "eslint": "^3.6.0",
-    "eslint-config-airbnb": "^11.2.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-lodash": "^2.4.5",
-    "eslint-plugin-react": "^6.3.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.3.1",
@@ -31,6 +25,10 @@
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
+    "tslint": "^5.7.0",
+    "tslint-config-airbnb": "^5.3.0",
+    "tslint-config-prettier": "^1.6.0",
+    "tslint-react": "^3.2.0",
     "typescript": "^2.5.3",
     "webpack": "^3.6.0"
   },
