--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "RetroCraft <retrocraft314@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir dist --ignore src/app --presets env --watch & webpack --watch",
+    "build": "tsc src/index.ts --outDir dist --watch & webpack --watch",
     "postinstall": "node scripts/fix-semantic.js"
   },
   "devDependencies": {
+    "@types/express": "^4.0.37",
     "@types/lodash-es": "^4.14.7",
     "@types/moment": "^2.13.0",
+    "@types/mysql": "^0.0.34",
     "@types/react": "^16.0.14",
     "@types/react-dom": "^16.0.1",
     "@types/react-router-dom": "^4.0.8",
