--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "RetroCraft <retrocraft314@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc src/index.ts --outDir dist --watch & webpack --watch",
+    "build":
+      "concurrently --kill-all --names \"TypeScript,Webpack\" \"tsc src/index.ts --outDir dist --watch\" \"webpack --watch\"",
     "postinstall": "node scripts/fix-semantic.js"
   },
   "devDependencies": {
@@ -18,6 +19,7 @@
     "@types/react-dom": "^16.0.1",
     "@types/react-router-dom": "^4.0.8",
     "awesome-typescript-loader": "^3.2.3",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
