--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "module": "commonjs",
     "target": "es5",
     "moduleResolution": "node",
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"]
+    }
   },
   "exclude": ["node_modules"]
 }
