--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "MIT",
   "scripts": {
     "build":
-      "concurrently --allow-restart -n \"TypeScript,Webpack,Server\" \"yarn run build:ts\" \"yarn run run:webpack\" \"yarn run run:nodemon\"",
+      "concurrently --allow-restart -k -n \"TypeScript,Webpack,Server\" \"yarn run build:ts\" \"yarn run run:webpack\" \"yarn run run:nodemon\"",
     "build:ts": "tsc src/index.ts --outDir dist --watch",
     "build:webpack": "webpack -p --config webpack.prod.js",
     "run:webpack": "webpack-dev-server --open --config webpack.dev.js",
-    "run:nodemon": "nodemon --watch src --ignore src/app -e ts dist/index.js",
+    "run:nodemon": "nodemon --watch dist --ignore dist/app -e ts dist/index.js",
     "postinstall": "node scripts/fix-semantic.js"
   },
   "devDependencies": {
