--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "RetroCraft <retrocraft314@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "concurrently --allow-restart -k -n \"TypeScript,Webpack,Server\" \"yarn run build:ts\" \"yarn run run:webpack\" \"yarn run run:nodemon\"",
-    "build:ts": "tsc src/index.ts --outDir dist --watch",
+    "build":
+      "concurrently -k -n \"Webpack,Server\" \"yarn run run:webpack\" \"yarn run run:nodemon\"",
+    "build:ts": "tsc src/index.ts --outDir dist",
     "build:webpack": "webpack -p --config webpack.prod.js",
-    "run:webpack": "webpack-dev-server --open --config webpack.dev.js",
+    "run:webpack": "webpack-dev-server --config webpack.dev.js",
     "run:nodemon": "nodemon --watch dist --ignore dist/app -e ts dist/index.js",
     "postinstall": "node scripts/fix-semantic.js"
   },
@@ -34,6 +35,7 @@
     "less-loader": "^4.0.5",
     "less-plugin-autoprefix": "^1.5.1",
     "nodemon": "^1.12.1",
+    "react-hot-loader": "^3.1.1",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
