--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,24 @@
 language: node_js
+
 node_js:
-  - "node"
+- node
+
 cache:
   yarn: true
+
+addons:
+  ssh_known_hosts: 35.190.169.212
+
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_d05dc4972430_key -iv $encrypted_d05dc4972430_iv
+  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/dist build@35.190.169.212:/var/volunteeringpeel
+  on:
+    branch: master
