dev branch for random things

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "build": "yarn run build:ts && yarn run build:webpack",
     "build:ts": "tsc --outDir dist src/*.ts",
     "build:webpack": "webpack -p --config webpack.prod.js",
-    "dev": "concurrently -k -n \"Webpack,Node\" \"yarn run dev:webpack\" \"yarn run dev:nodemon\"",
+    "dev": "concurrently -k -n \"Webpack,Node\" \"yarn run dev:webpack\" \"nodemon\"",
     "dev:webpack": "webpack-dev-server --config webpack.dev.js",
-    "dev:nodemon": "nodemon --watch dist --ignore dist/app -e ts dist/index.js",
     "postinstall": "node scripts/fix-semantic.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
     "@types/bluebird": "^3.5.16",
+    "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/express-session": "^1.15.3",
     "@types/lodash-es": "^4.14.7",
@@ -54,6 +54,7 @@
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "immutability-helper": "^2.4.0",
