--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@types/bluebird": "^3.5.16",
     "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
+    "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.3",
     "@types/lodash-es": "^4.14.7",
     "@types/moment": "^2.13.0",
-    "@types/mysql": "^0.0.34",
     "@types/react": "^16.0.14",
     "@types/react-dom": "^16.0.1",
     "@types/react-router-dom": "^4.0.8",
@@ -56,11 +56,12 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-mysql-session": "^1.2.2",
     "express-session": "^1.15.6",
     "immutability-helper": "^2.4.0",
     "lodash-es": "^4.17.4",
     "moment": "^2.19.1",
-    "mysql": "^2.15.0",
+    "promise-mysql": "^3.1.1",
     "react": "^15",
     "react-dom": "^15",
     "react-router": "^4.2.0",
