Move main branch from master -> production
So dev -> master and master -> production. Cause that's how it's supposed to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ deploy:
   skip_cleanup: true
   script: /bin/bash scripts/deploy.sh $DEPLOY_HOST $TRAVIS_BUILD_DIR
   on:
-    branch: master
+    branch: production
