--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "promise-mysql": "^3.1.1",
     "react": "^15",
     "react-dom": "^15",
+    "react-markdown": "^2.5.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "semantic-ui-less": "^2.2.12",
