--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.0.39",
     "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.5",
+    "@types/immutability-helper": "^2.0.15",
     "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
