--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
+    "@types/react-hot-loader": "^3.0.5",
     "@types/react-router-dom": "^4.2.0",
+    "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.3.0",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
@@ -47,6 +49,7 @@
     "tslint-react": "^3.2.0",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1",
+    "webpack-dashboard": "^1.0.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.1"
