--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
     "@types/react-hot-loader": "^3.0.5",
+    "@types/react-router-config": "^1.0.4",
     "@types/react-router-dom": "^4.2.0",
     "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.3.0",
@@ -71,6 +72,7 @@
     "react-dom": "^16.0.0",
     "react-markdown": "^2.5.0",
     "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
