--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@types/express-session": "^1.15.5",
     "@types/immutability-helper": "^2.0.15",
     "@types/lodash-es": "^4.17.0",
+    "@types/mysql": "^2.15.1",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
     "@types/react-hot-loader": "^3.0.5",
+    "@types/react-redux": "^5.0.12",
     "@types/react-router-config": "^1.0.4",
     "@types/react-router-dom": "^4.2.0",
+    "@types/react-router-redux": "^5.0.10",
     "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.3.0",
     "concurrently": "^3.5.0",
@@ -62,6 +65,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "express-mysql-session": "^1.2.2",
     "express-session": "^1.15.6",
     "immutability-helper": "^2.4.0",
@@ -71,9 +75,12 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-markdown": "^2.5.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "redux": "^3.7.2",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
   },
