--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-router-config": "^1.0.4",
     "@types/react-router-dom": "^4.2.0",
     "@types/react-router-redux": "^5.0.10",
+    "@types/redux-actions": "^2.2.2",
+    "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.3.0",
     "concurrently": "^3.5.0",
@@ -86,6 +88,9 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
   },
