--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
   },
