--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.3.0",
+    "clean-webpack-plugin": "^0.1.17",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
