--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
     "webpack-dashboard": "^1.0.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "auth0-js": "^8.11.1",
-    "auth0-lock-passwordless": "^2.2.3",
     "axios": "^0.17.0",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^1.0.3",
