--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
     "@types/react-hot-loader": "^3.0.5",
+    "@types/react-loadable": "^5.3.0",
     "@types/react-redux": "^5.0.12",
     "@types/react-router-config": "^1.0.4",
     "@types/react-router-dom": "^4.2.0",
@@ -80,6 +81,7 @@
     "promise-mysql": "^3.1.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-loadable": "^5.3.1",
     "react-markdown": "^2.5.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
