--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.2",
     "awesome-typescript-loader": "^3.3.0",
+    "babel-cli": "^7.0.0-beta.3",
+    "babel-loader": "^7.1.2",
     "clean-webpack-plugin": "^0.1.17",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
@@ -46,7 +48,7 @@
     "less-loader": "^4.0.5",
     "less-plugin-autoprefix": "^1.5.1",
     "nodemon": "^1.12.1",
-    "react-hot-loader": "^3.1.1",
+    "react-hot-loader": "^4.0.0-beta.3",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0",
