--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.5",
     "@types/immutability-helper": "^2.0.15",
-    "@types/lodash-es": "^4.17.0",
+    "@types/lodash": "^4.14.91",
     "@types/mysql": "^2.15.1",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
-    "@types/react-hot-loader": "^3.0.5",
     "@types/react-loadable": "^5.3.0",
     "@types/react-redux": "^5.0.12",
     "@types/react-router-config": "^1.0.4",
@@ -38,6 +37,8 @@
     "awesome-typescript-loader": "^3.3.0",
     "babel-cli": "^7.0.0-beta.3",
     "babel-loader": "^7.1.2",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^0.1.17",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
@@ -78,7 +79,7 @@
     "express-session": "^1.15.6",
     "immutability-helper": "^2.4.0",
     "jwks-rsa": "^1.2.1",
-    "lodash-es": "^4.17.4",
+    "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "promise-mysql": "^3.1.1",
     "react": "^16.0.0",
