--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "cache-loader": "^1.2.0",
     "clean-webpack-plugin": "^0.1.17",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
