--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,10 +5,7 @@
     "target": "es2015",
     "moduleResolution": "node",
     "jsx": "react",
-    "baseUrl": ".",
-    "paths": {
-      "@app/*": ["src/app/*"]
-    }
+    "baseUrl": "."
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "./src/app"]
 }
