--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/react-router-config": "^1.0.6",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-router-redux": "^5.0.12",
+    "@types/react-widgets": "^4.1.1",
+    "@types/react-widgets-moment": "^4.0.1",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
@@ -88,6 +90,8 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
+    "react-widgets": "^4.2.2",
+    "react-widgets-moment": "^4.0.9",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
