(admin/back-end) Update shift

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,8 @@
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "@app/*": [
-        "src/app/*"
-      ]
+      "@app/*": ["src/app/*"]
     }
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
