--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "awesome-typescript-loader": "^3.5.0",
     "babel-cli": "^7.0.0-beta.3",
     "babel-loader": "^7.1.3",
+    "babel-minify-webpack-plugin": "^0.3.0",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cache-loader": "^1.2.0",
@@ -60,7 +61,6 @@
     "tslint-config-prettier": "^1.9.0",
     "tslint-react": "^3.5.1",
     "typescript": "^2.7.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.20.0",
