--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "test": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
     "build": "yarn run build:server && yarn run build:client",
-    "build:server":
-      "webpack --config webpack.server.js; cp ./src/api/passwords.js ./dist/passwords.js || :",
+    "build:server": "webpack --config webpack.server.js; cp ./src/api/passwords.js ./dist/passwords.js || :",
     "build:client": "webpack --progress --config webpack.prod.js",
     "dev": "nodemon",
     "postinstall": "node scripts/fix-semantic.js"
@@ -57,6 +56,7 @@
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.1.0",
     "ts-node": "^5.0.0",
+    "tsconfig-paths": "^3.1.3",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
     "tslint-config-prettier": "^1.9.0",
