config.yml header

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
-# Javascript Node CircleCI 2.0 configuration file
 #
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+# CIRCLE CI Configuration File
+#
+# Runs automatic build and deploy, while saving artefacts
 #
 version: 2
 jobs:
