--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,18 +17,26 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: yarn install
-
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+        name: yarn-install
+        command: yarn install
       - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ./node_modules
         
-      # run tests!
-      - run: yarn run build
-      - run: yarn run test
+      # Build artefacts
+      - run:
+        name: build
+        command: yarn run build
+
+      # Run tests
+      - run:
+        name: test
+        command: yarn run test
+      
+      # Store build artefacts
+      - store_artifacts:
+        path: dist
+        destination: build
