--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ defaults: &defaults
 version: 2
 jobs:
     dependencies:
-        <<: *defualts
+        <<: *defaults
         steps:
             - checkout
             # Download and cache dependencies
