Run deploy only on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,5 +139,8 @@ workflows:
                     - build_client
                     - test
             - deploy:
+                filters:
+                    branches:
+                        only: master
                 requires:
                     - store_artifacts
