--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express-jwt": "^0.0.38",
     "@types/immutability-helper": "^2.6.3",
     "@types/lodash": "^4.14.104",
+    "@types/multer": "^1.3.6",
     "@types/mysql": "^2.15.1",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
@@ -88,6 +89,7 @@
     "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
+    "multer": "^1.3.0",
     "promise-mysql": "^3.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
