--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/body-parser": "^1.16.7",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.11.1",
-    "@types/express-jwt": "^0.0.38",
+    "@types/express-jwt": "^0.0.40",
+    "@types/express-ws": "^3.0.0",
     "@types/immutability-helper": "^2.6.3",
     "@types/lodash": "^4.14.104",
     "@types/multer": "^1.3.6",
@@ -41,6 +42,7 @@
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
     "@types/webpack-env": "^1.13.5",
+    "@types/ws": "^4.0.2",
     "awesome-typescript-loader": "^3.5.0",
     "babel-cli": "^7.0.0-beta.3",
     "babel-loader": "^7.1.3",
@@ -83,8 +85,9 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2",
-    "express-jwt": "^5.3.0",
+    "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "express-ws": "^3.0.0",
     "immutability-helper": "^2.6.5",
     "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
@@ -108,7 +111,8 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "semantic-ui-less": "^2.3.0",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "^0.78.2",
+    "ws": "^5.1.1"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
