--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express-jwt": "^0.0.40",
     "@types/express-ws": "^3.0.0",
     "@types/immutability-helper": "^2.6.3",
+    "@types/jsonwebtoken": "^7.2.6",
     "@types/lodash": "^4.14.104",
     "@types/multer": "^1.3.6",
     "@types/mysql": "^2.15.1",
@@ -89,6 +90,7 @@
     "express-jwt": "^5.3.1",
     "express-ws": "^3.0.0",
     "immutability-helper": "^2.6.5",
+    "jsonwebtoken": "^8.2.1",
     "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
