--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@types/express": "^4.11.1",
     "@types/express-jwt": "^0.0.40",
     "@types/express-ws": "^3.0.0",
-    "@types/immutability-helper": "^2.6.3",
     "@types/jsonwebtoken": "^7.2.6",
     "@types/lodash": "^4.14.104",
     "@types/multer": "^1.3.6",
     "@types/mysql": "^2.15.1",
+    "@types/node": "9.6.7",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/react-loadable": "^5.3.4",
