--- a/package.json
+++ b/package.json
@@ -81,11 +81,13 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "@types/csv-stringify": "^1.4.2",
     "auth0-js": "^9.3.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "csv-stringify": "^3.0.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
