--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/multer": "^1.3.6",
     "@types/mysql": "^2.15.1",
     "@types/node": "9.6.7",
+    "@types/pdfmake": "^0.1.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/react-loadable": "^5.3.4",
@@ -98,6 +99,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "multer": "^1.3.0",
+    "pdfmake": "^0.1.36",
     "promise-mysql": "^3.2.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
