--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.1",
+    "less": "2.7.3",
     "less-loader": "^4.0.5",
     "less-plugin-autoprefix": "^1.5.1",
     "nodemon": "^1.15.1",
