--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "semantic-ui-less": "^2.3.1",
+    "semantic-ui-less": "~2.2",
     "semantic-ui-react": "^0.79.1",
     "web-animations-js": "^2.3.1",
     "ws": "^5.1.1"
