--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^7.2.6",
     "@types/lodash": "^4.14.104",
     "@types/multer": "^1.3.6",
+    "@types/mv": "^2.1.0",
     "@types/mysql": "^2.15.1",
     "@types/node": "9.6.7",
     "@types/pdfmake": "^0.1.1",
@@ -99,6 +100,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "multer": "^1.3.0",
+    "mv": "^2.1.1",
     "pdfmake": "^0.1.36",
     "promise-mysql": "^3.2.1",
     "react": "^16.3.2",
