--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,10 @@ jobs:
                 name: Fetch artifacts
                 command: |
                     export BUILD_NUM=$(cat build_num.txt)
-                    ssh -p 42069 -t build@beta.volunteeringpeel.org -o StrictHostKeyChecking=no "bash /var/www/volunteeringpeel/scripts/deploy.sh $BUILD_NUM $CIRCLE_API_KEY"
+                    ssh -p 42069 -t build@beta.volunteeringpeel.org \
+                    -o StrictHostKeyChecking=no \
+                    BUILD_NUM=$BUILD_NUM CIRCLE_API_KEY=$CIRCLE_API_KEY \
+                    'bash -s' < scripts/deploy.sh
 
 workflows:
     version: 2
