--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cache-loader": "^1.2.0",
     "clean-webpack-plugin": "^0.1.18",
     "concurrently": "^3.5.0",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
