--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
     "start": "node -r dotenv/config dist/index.js"
   },
   "devDependencies": {
-    "@types/auth0-js": "^8.11.2",
-    "@types/bluebird": "^3.5.20",
+    "@types/auth0-js": "^8.11.5",
+    "@types/bluebird": "^3.5.23",
     "@types/body-parser": "^1.16.7",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.11.1",
     "@types/express-jwt": "^0.0.40",
     "@types/express-ws": "^3.0.0",
-    "@types/jsonwebtoken": "^7.2.6",
-    "@types/lodash": "^4.14.104",
-    "@types/multer": "^1.3.6",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/lodash": "^4.14.116",
+    "@types/multer": "^1.3.7",
     "@types/mv": "^2.1.0",
-    "@types/mysql": "^2.15.1",
+    "@types/mysql": "^2.15.5",
     "@types/node": "9.6.7",
     "@types/pdfmake": "^0.1.1",
     "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
+    "@types/react-dom": "^16.0.7",
     "@types/react-loadable": "^5.3.4",
     "@types/react-redux": "^5.0.19",
-    "@types/react-router-config": "^1.0.6",
+    "@types/react-router-config": "^1.0.8",
     "@types/react-router-dom": "^4.2.6",
-    "@types/react-router-redux": "^5.0.13",
-    "@types/react-widgets": "^4.1.2",
+    "@types/react-router-redux": "^5.0.15",
+    "@types/react-widgets": "^4.1.5",
     "@types/react-widgets-moment": "^4.0.1",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
@@ -49,14 +49,14 @@
     "@types/ws": "^4.0.2",
     "awesome-typescript-loader": "^3.5.0",
     "babel-cli": "^7.0.0-beta.3",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.5",
     "babel-minify-webpack-plugin": "^0.3.0",
-    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cache-loader": "^1.2.0",
     "clean-webpack-plugin": "^0.1.18",
     "concurrently": "^3.5.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
@@ -78,32 +78,31 @@
     "typescript": "^2.7.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^2.0.6",
-    "webpack-hot-middleware": "^2.20.0",
+    "webpack-hot-middleware": "^2.22.3",
     "webpack-jarvis": "^0.3.0",
-    "webpack-merge": "^4.1.2",
+    "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "@types/csv-stringify": "^1.4.2",
     "auth0-js": "^9.3.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "csv-stringify": "^3.0.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "express-ws": "^3.0.0",
-    "immutability-helper": "^2.6.5",
+    "immutability-helper": "^2.7.1",
     "jsonwebtoken": "^8.2.1",
     "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
-    "moment": "^2.20.1",
-    "multer": "^1.3.0",
+    "moment": "^2.22.2",
+    "multer": "^1.3.1",
     "mv": "^2.1.1",
     "pdfmake": "^0.1.36",
-    "promise-mysql": "^3.2.1",
+    "promise-mysql": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-ga": "https://github.com/react-ga/react-ga#6c14fda43799e3bfa6379b0e9288d432369e85ae",
@@ -115,14 +114,14 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-widgets": "^4.2.6",
-    "react-widgets-moment": "^4.0.12",
-    "redux": "^3.7.2",
+    "react-widgets-moment": "^4.0.20",
+    "redux": "^3.0.0",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "~2.2.0",
     "reselect": "^3.0.1",
-    "semantic-ui-less": "~2.2",
-    "semantic-ui-react": "^0.79.1",
+    "semantic-ui-less": "~2.3.3",
+    "semantic-ui-react": "^0.82.2",
     "web-animations-js": "^2.3.1",
     "ws": "^5.1.1"
   },
