--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@types/express": "^4.11.1",
     "@types/express-jwt": "^0.0.40",
     "@types/express-ws": "^3.0.0",
+    "@types/fs-extra": "^5.0.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/multer": "^1.3.7",
-    "@types/mv": "^2.1.0",
     "@types/mysql": "^2.15.5",
-    "@types/node": "9.6.7",
+    "@types/node": "^8",
     "@types/pdfmake": "^0.1.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.7",
@@ -47,7 +47,7 @@
     "@types/web-animations-js": "^2.2.6",
     "@types/webpack-env": "^1.13.5",
     "@types/ws": "^4.0.2",
-    "awesome-typescript-loader": "^3.5.0",
+    "awesome-typescript-loader": "^4",
     "babel-cli": "^7.0.0-beta.3",
     "babel-loader": "^7.1.5",
     "babel-minify-webpack-plugin": "^0.3.0",
@@ -69,7 +69,7 @@
     "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.1.0",
-    "ts-node": "^5.0.0",
+    "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.1.3",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
@@ -78,7 +78,7 @@
     "typescript": "^2.7.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^2.0.6",
-    "webpack-hot-middleware": "^2.22.3",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-jarvis": "^0.3.0",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.6.0"
@@ -90,22 +90,22 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "csv-stringify": "^3.0.0",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "express-ws": "^3.0.0",
+    "fs-extra": "^7.0.0",
     "immutability-helper": "^2.7.1",
     "jsonwebtoken": "^8.2.1",
     "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "multer": "^1.3.1",
-    "mv": "^2.1.1",
     "pdfmake": "^0.1.36",
     "promise-mysql": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-ga": "https://github.com/react-ga/react-ga#6c14fda43799e3bfa6379b0e9288d432369e85ae",
+    "react-ga": "^2.5.3",
     "react-loadable": "^5.3.1",
     "react-markdown": "^3.3.0",
     "react-redux": "^5.0.7",
