--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "multer": "^1.3.1",
+    "nodemailer": "^4.6.8",
     "pdfmake": "^0.1.36",
     "promise-mysql": "^3.3.1",
     "react": "^16.3.2",
