--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/multer": "^1.3.7",
     "@types/mysql": "^2.15.5",
     "@types/node": "^8",
+    "@types/nodemailer": "^4.6.5",
     "@types/pdfmake": "^0.1.1",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.7",
