--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
+    "@types/moment-timezone": "^0.5.9",
     "@types/multer": "^1.3.7",
     "@types/mysql": "^2.15.5",
     "@types/node": "^8",
@@ -100,6 +101,7 @@
     "jwks-rsa": "^1.2.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "multer": "^1.3.1",
     "pdfmake": "^0.1.36",
     "promise-mysql": "^3.3.1",
