--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-widgets-moment": "^4.0.1",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
+    "@types/sequelize": "^4.27.31",
     "@types/web-animations-js": "^2.2.6",
     "@types/webpack-env": "^1.13.5",
     "@types/ws": "^4.0.2",
@@ -103,8 +104,8 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "multer": "^1.3.1",
+    "mysql2": "^1.6.4",
     "pdfmake": "^0.1.36",
-    "promise-mysql": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-ga": "^2.5.3",
@@ -124,6 +125,7 @@
     "reselect": "^3.0.1",
     "semantic-ui-less": "~2.3.3",
     "semantic-ui-react": "^0.82.2",
+    "sequelize": "^4.41.2",
     "web-animations-js": "^2.3.1",
     "ws": "^5.1.1"
   },
