--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@types/auth0-js": "^8.11.5",
-    "@types/bluebird": "^3.5.23",
+    "@types/bluebird": "3.5.18",
     "@types/body-parser": "^1.16.7",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.11.1",
@@ -45,7 +45,6 @@
     "@types/react-widgets-moment": "^4.0.1",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
-    "@types/sequelize": "^4.27.31",
     "@types/web-animations-js": "^2.2.6",
     "@types/webpack-env": "^1.13.5",
     "@types/ws": "^4.0.2",
@@ -89,7 +88,7 @@
     "auth0-js": "^9.3.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "bluebird": "^3.5.1",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "csv-stringify": "^3.0.0",
     "dotenv": "^6.0.0",
@@ -122,10 +121,12 @@
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "~2.2.0",
+    "reflect-metadata": "^0.1.12",
     "reselect": "^3.0.1",
     "semantic-ui-less": "~2.3.3",
     "semantic-ui-react": "^0.82.2",
     "sequelize": "^4.41.2",
+    "sequelize-typescript": "^0.6.6",
     "web-animations-js": "^2.3.1",
     "ws": "^5.1.1"
   },
