chore: sort bugs out for compilation
use commonjs modules to make node happy

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,6 +4,7 @@
     "noImplicitAny": true,
     "target": "es6",
     "moduleResolution": "node",
+    "module": "commonjs",
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
