--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "less-plugin-autoprefix": "^1.5.1",
     "nodemon": "^1.15.1",
     "react-hot-loader": "^4.0.0-beta.3",
+    "source-map-support": "^0.5.9",
     "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.1.0",
