--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "noImplicitAny": true,
     "removeComments": false,
     "target": "es2015",
+    "lib": ["es2017", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
