--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "3.9.0",
     "less-loader": "^5.0.0",
     "less-plugin-autoprefix": "^2.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.15.1",
     "react-hot-loader": "^4.12.14",
     "source-map-support": "^0.5.13",
