--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "sequelize": "^4.44.3",
     "sequelize-typescript": "^0.6.11",
     "web-animations-js": "^2.3.1",
-    "ws": "^5.1.1"
+    "ws": "^5.1.1",
+    "yarn": "^1.22.5"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
